# FFT-Optimization-Research

./: .gitignore  CMakeLists.txt  README.md
docs/: fft_ieee_paper.tex
docs/dsections/: abstract.tex  algorithm_and_implementation.tex  aos_soa_layout.tex  applications.tex  conclusion.tex  introduction.tex  mathematical_foundations.tex  mixed_radix_42_fft.tex  results_comparison.tex  split_radix_fft.tex  verification.tex
docs/figures/layout_optimization/: fft_layout_raw.csv  fft_layout_summary.csv
include/fft/: dft_reference.hpp  fft.hpp  fft_dispatch.hpp  fft_mixed_radix_4_2_iterative.hpp  fft_mixed_radix_4_2_soa.hpp  fft_radix2_iterative.hpp  fft_radix2_recursive.hpp  fft_radix2_soa.hpp  fft_soa.hpp  fft_split_radix.hpp
scripts/: fft_benchmark_plot.py
src/: dft_reference.cpp  fft.cpp  fft_benchmark.cpp  fft_demo.cpp  fft_dispatch.cpp  fft_mixed_radix_4_2_iterative.cpp  fft_mixed_radix_4_2_soa.cpp  fft_radix2_iterative.cpp  fft_radix2_recursive.cpp  fft_radix2_soa.cpp  fft_split_radix.cpp
tests/: test_fft.cpp
